# fraud-detection-paysphere

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
app/: analytics_view.py  api.py  app.py  batch_view.py  live_view.py  main.py  overview_view.py  pipeline_view.py  schemas.py  ui_components.py
config/: config.yaml  logging.yaml
data/processed/: transactions_features.csv
models/artifacts/: fraud_model.joblib  fraud_pipeline.joblib
models/encoders/: preprocessing.joblib
notebooks/: 01_eda.ipynb  02_feature_dev.ipynb  03_threshold_tuning.ipynb  04_report_plots.ipynb
plotly_dash/: app.py  config.py  state.py
plotly_dash/assets/: theme.css
plotly_dash/components/: layout.py  sidebar.py
plotly_dash/core/: cache_engine.py  data_loader.py  model_loader.py  risk_engine.py
plotly_dash/pages/: executive.py  governance.py  model_lab.py  risk_console.py  segment_explorer.py
src/: exceptions.py  logger.py
src/data_ingestion/: ingestion.py
src/data_validation/: validation.py
src/features/: feature_engineering.py
src/modeling/: inference.py  model_definition.py  train.py
src/pipeline/: run_pipeline.py
src/utils/: io_utils.py  metrics_utils.py  validation_utils.py
tests/: conftest.py  test_data_ingestion.py  test_feature_engineering.py  test_inference.py  test_model_training.py
