[metadata]
name = paysphere-fraud-detection
version = 0.1.0
description = End-to-end fraud detection pipeline and Streamlit app for PaySphere.

[options]
packages = find:
python_requires = >=3.9

[flake8]
max-line-length = 100
ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv

[isort]
profile = black

[tool:pytest]
addopts = -q
testpaths = tests

[mypy]
ignore_missing_imports = True